Actions
Bug #10702
closedloader: console.c inconsistent indenting
Start date:
2019-04-09
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
smatch
Gerrit CR:
External Bug:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../../common/console.c:311 cons_change() warn: inconsistent indenting
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9c3cf8b30473a1ce5e6f5e1b75844daf78ae0309
commit 9c3cf8b30473a1ce5e6f5e1b75844daf78ae0309 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-09T16:44:38.000Z 10702 loader: console.c inconsistent indenting Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions